--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,8 +3,9 @@ FROM node:alpine
 WORKDIR '/app'
 
 COPY package.json .
-RUN npm install
 
+RUN npm install
+RUN npm test 
 COPY . .
 
 CMD ["npm","run","start"]
