--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 sudo: required
+language: generic
+
 services:
-	- docker
+  - docker
 
 before_install:
-	- docker build -t adarsh/docker-react -f Dockerfile.dev .
+  - docker build -t adarsh/docker-react -f Dockerfile.dev .
+
 script:
-	- docker run adarsh/docker-react npm run test -- --coverage
+  - docker run -e CI=true adarsh/docker-react npm run test
